--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
      </ol>
      <hr>
      <h3>Skill in Hobbies</h3>
-     <table border="1" cellspacing="10" >
+     <table cellspacing="10" >
        <tr>
          <td>Driving  ⭐⭐⭐⭐⭐</td>
          <td>Travelling  ⭐⭐</td>
