--- a/Contact.html
+++ b/Contact.html
@@ -12,13 +12,13 @@
       <li>Mobile : 9988776655</li>
       <li>Linked In : Birds of Feather</li>
      </ul>
-     <form class="" action="mailto:sksmanvi@gmail.com" method="post">
+     <form action="mailto:sksmanvi@gmail.com" method="post" enctype="text/plain">
        <label for="">Your Name </label>
        <input type="text" name="Your Name" value=""> <br>
        <label for=""> Your Email </label>
        <input type="email" name="Your Email" value=""> <br>
        <label for=""> Your Message</label> <br>
-        <textarea name="name" rows="10" cols="30"></textarea> <br>
+        <textarea name="Your Message" rows="10" cols="30"></textarea> <br>
        <input type="submit">
 
      </form>
