--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>I have completed my Graduation in Electrical Engineering.I pursue Website development
     as a hobby and what to learn and grow in the same.
     I will become a Website Developer in 2021</p>
-    <h4> <a href="contact.html">Contact Me</a> </h4>
+    <h4> <a href="Contact.html">Contact Me</a> </h4>
     <hr size="2"noshade/>
     <h3>Education</h3>
        <table  cellspacing="10">
